# TalentRanker

./: .dockerignore  .gitignore  Dockerfile_lightweight  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml
src/: config_loader.py  data_parser.py  data_parser_ocr.py  description_extractor.py  gradio.py  gradio_lightweight.py  prompts.py  resume_extractor.py  resumes_ranker.py  ui_utils.py  utils.py
src/embed_ranker/: embed_ranker.py  embed_utils.py  similarity_calculator.py
