[project]
name = "talentranker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.48.0",
    "fuzzywuzzy>=0.18.0",
    "gradio>=5.44.1",
    "hf-xet>=1.1.8",
    "langchain-core>=0.3.75",
    "langchain-google-genai>=2.1.10",
    "pillow>=11.3.0",
    "pymupdf>=1.26.4",
    "pytesseract>=0.3.13",
    "python-levenshtein>=0.27.1",
    "sentence-transformers>=5.1.0",
]
